--- a/static/styles/ops_dark/style.css
+++ b/static/styles/ops_dark/style.css
@@ -4378,7 +4378,7 @@ table.staff {
     font-size: 1.03em;
     font-style: italic;
     padding: 2px 5px;
-    background: #18191a;
+    background: #1D1E1F;
     -webkit-box-shadow: inset 0 3px 3px -3px rgba(0, 0, 0, .4), inset 0 -3px 3px -3px rgba(0, 0, 0, .4);
     box-shadow: inset 0 3px 3px -3px rgba(0, 0, 0, .4), inset 0 -3px 3px -3px rgba(0, 0, 0, .4)
 }
