--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -1877,6 +1877,9 @@ ul#userinfo_username:hover li#nav_userinfo a {
 #nav_upload a {
     background-image: url(../assets/icons/Header-Upload-torrent.svg)
 }
+#nav_bonus a{
+    background-image: url(../assets/icons/bookmark_selected-dark.svg)
+}
 #nav_invite a {
     background-image: url(../assets/icons/Header-Invite.svg)
 }
