--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -1878,7 +1878,7 @@ ul#userinfo_username:hover li#nav_userinfo a {
     background-image: url(../assets/icons/Header-Upload-torrent.svg)
 }
 #nav_bonus a{
-    background-image: url(../assets/icons/bookmark_selected-dark.svg)
+    background-image: url(../assets/icons/points.png)
 }
 #nav_invite a {
     background-image: url(../assets/icons/Header-Invite.svg)
