--- a/static/styles/ops_dark/style.css
+++ b/static/styles/ops_dark/style.css
@@ -1876,6 +1876,11 @@ ul#userinfo_username:hover li#nav_userinfo a {
 #nav_upload a {
     background-image: url(../assets/icons/Header-Upload-torrent.svg)
 }
+
+#nav_bonus a{
+    background-image: url(../assets/icons/points.png)
+}
+
 #nav_invite a {
     background-image: url(../assets/icons/Header-Invite.svg)
 }
