--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -4072,6 +4072,13 @@ span[style*="color: red;"] a {
 #requests .search_form input[type=submit] {
     margin: 10px
 }
+#user .avatar_container div {
+    width: 100%;
+}
+
+.avatar_container img {
+    max-width: 100%;
+}
 #reportform {
     margin: 35px auto;
     padding: 10px 20px
