Sort the remove icon

--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -1160,7 +1160,7 @@ p.min_padding {
     filter: brightness(100%)
 }
 .icon_remove {
-    background-image: url(../assets/icons/Remove.svg)
+    background-image: url(../assets/icons/Removeblue.svg)
 }
 .additional_add_artist a,
 .remove a,
