--- a/static/styles/ops_dark/style.css
+++ b/static/styles/ops_dark/style.css
@@ -3572,6 +3572,8 @@ table.forum_list tr:last-of-type td {
 }
 .forum_index tr.colhead td,
 table.forum_list tr.colhead td {
+    position: relative !important;
+    z-index: 5000;
     padding-left: 8px;
     padding-right: 25px;
     color: #f58080;
