change the colors a little

--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -3844,7 +3844,7 @@ li.graph {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#22d1a5), to(#22d1a5));
     background-image: -webkit-linear-gradient(top, #22d1a5, #22d1a5);
     background-image: -o-linear-gradient(top, #22d1a5, #22d1a5);
-    background-image: linear-gradient(180deg, #175b4a69, #22b18d)
+    background-image: linear-gradient(180deg, #104336, #176854)
 }
 .center_poll,
 .center_poll:after {
