--- a/static/styles/ops_dark/style.css
+++ b/static/styles/ops_dark/style.css
@@ -827,7 +827,7 @@ input[type=checkbox] + label {
     vertical-align: middle
 }
 input[type=checkbox] + label {
-    margin: 2px 10px 2px 0;
+    margin: 2px 10px 2px 20px;
     -webkit-transition: all .15s linear;
     -o-transition: all .15s linear;
     transition: all .15s linear;
