--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -831,6 +831,7 @@ input[type=checkbox] + label {
     margin: 3px;
     vertical-align: middle
 }
+#browse torrents page?
 input[type=checkbox] + label {
     margin: 2px 10px 2px 20px;
     -webkit-transition: all .15s linear;
