--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -828,7 +828,7 @@ input[type=checkbox] + label {
     vertical-align: middle
 }
 input[type=checkbox] + label {
-    margin: 2px 10px 2px 20px;
+    margin: 2px 10px 2px 0;
     -webkit-transition: all .15s linear;
     -o-transition: all .15s linear;
     transition: all .15s linear;
@@ -4708,6 +4708,7 @@ table.staff {
 }
 #forum .search_form td,
 #torrents .search_form table:not(.cat_list) td {
+    margin: 2px 10px 2px 20px;
     padding: 4px;
     vertical-align: middle
 }
