--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -4728,6 +4728,7 @@ table.staff {
 }
 .cat_list tr td label,
 .search_form #categories label {
+    margin: 2px 10px 2px 20px;
     display: inline-block;
     text-align: center
 }
