--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -3282,7 +3282,7 @@ ul.collage_images img {
     margin: auto;
     max-height: 100%;
     max-width: 100%;
-    position: absolute;
+    position: relative;
     right: 0;
     top: 0;
     width: auto;
