--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -3257,7 +3257,7 @@ ul.collage_images li {
     width: 20%
 }
 ul.collage_images li:not([class^=image_group]) {
-    height: 0;
+    height: 100%;
     padding: 0
 }
 ul.collage_images li:before {
