--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -4212,7 +4212,7 @@ span[style*="color: red;"] a {
 #rules div ul li > strong {
     font-size: 1em;
     font-weight: 400;
-    color: #d76363
+    color: #22b18d
 }
 #rules a strong {
     color: #fff
