--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -5116,7 +5116,7 @@ padding-bottom:0 !important;
     color: #f9f1ef
 }
 #userform .sidebar #settings_sections a:hover {
-    color: #ff9060
+    color: #22b18d
 }
 #userform table td:first-of-type {
     white-space: nowrap
