--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -4795,7 +4795,7 @@ span.remove_bookmark a:hover {
     padding: 3px 6px;
     visibility: visible;
     margin-bottom: -1px;
-    background-color: rgba(227, 81, 81, 0.15);  /* Red tint using #e35151 */
+    background-color: transparent;  /* Red tint using #e35151 */
     border-radius: 3px;
     margin-top: 2px;
     white-space: normal;
