--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -4817,6 +4817,9 @@ span.remove_bookmark a:hover {
     display: block;
     width: fit-content  /* Only as wide as content */
 }
+.request_table .tags {
+    background-color: rgba(34, 177, 141, 0.15);  /* your desired color */
+}
 .tags a {
     border-radius: 3px;
     display: inline-block;
