--- a/static/styles/ops_dark/redwithopslogo.css
+++ b/static/styles/ops_dark/redwithopslogo.css
@@ -5345,14 +5345,27 @@ ol.navigation_list li li {
 }
 
 /* New artist autocomplete menu. testing */
-body:has(ul.autocomplete-menu.show) .autocomplete-menu,
-ul.autocomplete-menu.show {
-    background-color: #101010 !important;
-    border-color: #333 !important;
+/* Hide the entire menu when not shown */
+ul.autocomplete-menu:not(.show) {
+    opacity: 0 !important;
+    pointer-events: none !important;
+    border: none !important;
 }
 
-/* Layout - copy from official but with !important */
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .collage-artist-entry,
+/* When shown - restore */
+ul.autocomplete-menu.show {
+    opacity: 1 !important;
+    pointer-events: auto !important;
+    background-color: #101010 !important;
+    border: 1px solid #333 !important;
+}
+
+/* Hide children when not shown */
+ul.autocomplete-menu:not(.show) * {
+    opacity: 0 !important;
+}
+
+/* Layout when shown */
 ul.autocomplete-menu.show .collage-artist-entry {
     display: grid !important;
     grid-template-columns: 150px 1fr !important;
@@ -5361,29 +5374,95 @@ ul.autocomplete-menu.show .collage-artist-entry {
     background-color: #101010 !important;
 }
 
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-img img,
+/* Images */
+ul.autocomplete-menu.show .cae-img {
+    display: block !important;
+    grid-row: span 4 !important;
+}
+
 ul.autocomplete-menu.show .cae-img img {
+    display: block !important;
     width: 150px !important;
     height: auto !important;
+    max-height: 150px !important;
+    object-fit: contain !important;
 }
 
-/* Colors */
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-name a,
-ul.autocomplete-menu.show .cae-name a {
-    color: #e35151 !important;
-}
-
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-tag-entry,
-ul.autocomplete-menu.show .cae-tag-entry {
-    background-color: rgba(227, 81, 81, 0.2) !important;
+/* Text styling */
+ul.autocomplete-menu.show .cae-name {
+    display: block !important;
+    font-size: 1.2em !important;
+    font-weight: bold !important;
     color: #fff !important;
 }
 
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-v-grp,
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-v-sna,
-body:has(ul.autocomplete-menu.show) .autocomplete-menu .cae-v-see,
+ul.autocomplete-menu.show .cae-name a {
+    color: #e35151 !important;
+    text-decoration: none !important;
+}
+
+/* Tags */
+ul.autocomplete-menu.show .cae-tag {
+    display: block !important;
+    margin: 5px 0 !important;
+}
+
+ul.autocomplete-menu.show .cae-tag .tags {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    gap: 5px !important;
+}
+
+ul.autocomplete-menu.show .cae-tag-entry {
+    display: inline-block !important;
+    background-color: rgba(227, 81, 81, 0.2) !important;
+    color: #fff !important;
+    padding: 2px 6px !important;
+    border-radius: 3px !important;
+    font-size: 0.85em !important;
+}
+
+/* Stats */
+ul.autocomplete-menu.show .cae-l-grp,
+ul.autocomplete-menu.show .cae-l-sna,
+ul.autocomplete-menu.show .cae-l-dcg,
+ul.autocomplete-menu.show .cae-l-see {
+    display: inline !important;
+    color: #888 !important;
+    font-size: 0.9em !important;
+}
+
 ul.autocomplete-menu.show .cae-v-grp,
 ul.autocomplete-menu.show .cae-v-sna,
 ul.autocomplete-menu.show .cae-v-see {
+    display: inline !important;
+    color: #e35151 !important;
+    font-size: 0.9em !important;
+    margin-right: 15px !important;
+}
+
+/* Bio */
+ul.autocomplete-menu.show .cae-bio {
+    display: block !important;
+    grid-column: 2 !important;
+    color: #aaa !important;
+    font-size: 0.9em !important;
+    line-height: 1.4 !important;
+    max-height: 100px !important;
+    overflow: hidden !important;
+}
+
+ul.autocomplete-menu.show .cae-bio-content {
+    color: #aaa !important;
+}
+
+/* Alias text */
+ul.autocomplete-menu.show .cae-artist-text {
+    display: block !important;
+    color: #888 !important;
+    font-size: 0.85em !important;
+}
+
+ul.autocomplete-menu.show .cae-primary-name {
     color: #e35151 !important;
 }
