--- a/static/styles/ops_dark/opsgreen.css
+++ b/static/styles/ops_dark/opsgreen.css
@@ -4405,7 +4405,7 @@ table.staff {
     color: #aaa!important
 }
 .group_torrent td:first-of-type span {
-    visibility: hidden
+    visibility: visible
 }
 .group_torrent td:first-of-type span a {
     visibility: visible
